Style:Fix: add margin on mobile

--- a/src/components/currencies/searchBar/SearchBar.module.scss
+++ b/src/components/currencies/searchBar/SearchBar.module.scss
@@ -76,6 +76,6 @@
   }
   @media (max-width: 300px) {
     max-width: 90%;
-    margin: 0 auto;
+    margin: 3rem auto;
   }
 }
